--- a/app/globals.css
+++ b/app/globals.css
@@ -15,15 +15,19 @@ body {
 }
 
 .montserrat-medium {
-  font-family: var(--font-montserrat-medium);
+  font-family: var(--font-montserrat-medium, Arial, Helvetica, sans-serif);
 }
 
 .montserrat-semibold {
-  font-family: var(--font-montserrat-semibold);
+  font-family: var(--font-montserrat-semibold, Arial, Helvetica, sans-serif);
 }
 
 .montserrat-extrabold {
-  font-family: var(--font-montserrat-extrabold);
+  font-family: var(--font-montserrat-extrabold, Arial, Helvetica, sans-serif);
+}
+
+.bowlby-one {
+  font-family: var(--font-bowlby-one, Arial, Helvetica, sans-serif);
 }
 
 :root {
